# university

./: .gitignore  CMakeLists.txt  DataBaseFile.cpp  DataBaseFile.hpp  Helper.cpp  Helper.hpp  IDataBase.hpp  Pesel.cpp  Pesel.hpp  Student.cpp  Student.hpp  University.cpp  University.hpp  main.cpp
.github/workflows/: university.yml
catch2/: catch_amalgamated.cpp
unit_tests/: CMakeLists.txt  cmain.cpp  pesel_test.cpp  student_test.cpp  university_test.cpp
